--- a/Insiderback-backup260825/package.json
+++ b/Insiderback-backup260825/package.json
@@ -5,10 +5,10 @@
   "main": "src/app.js",
   "scripts": {
     "start": "node src/app.js",
-    "dev": "nodemon src/app.js",
-    "test": "node --test \"src/**/*.test.js\""
+    "dev": "nodemon src/app.js"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.876.0",
     "axios": "^1.11.0",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.6.1",
@@ -24,6 +24,7 @@
     "graphql-tag": "^2.12.6",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "multer": "^2.0.2",
     "mysql2": "^3.14.3",
     "nodemailer": "^7.0.3",
     "pdfkit": "^0.17.1",
@@ -31,6 +32,7 @@
     "pg-hstore": "^2.3.4",
     "redis": "^5.6.1",
     "sequelize": "^6.37.7",
+    "sharp": "^0.34.3",
     "stripe": "^18.1.0",
     "undici": "^6.21.3"
   },
